Enhance character creation instructions in HTML; bold main steps and improve formatting for clarity

--- a/create_0lvl_character/create_0lvl_character.html
+++ b/create_0lvl_character/create_0lvl_character.html
@@ -1,5 +1,5 @@
 <!-- Remplacer les uuid de macro de Compendium.ludorg-shared-compendia.dcc-macros.Macro par les votres -->
-<p>La création de personnages dans DCC suit les étapes suivantes :</p>
+<p><strong>La création de personnages dans DCC suit les étapes suivantes :</strong></p>
 <p>1) Déterminez les scores de caractéristiques : 3d6, dans l’ordre.
     @UUID[Compendium.ludorg-shared-compendia.dcc-macros.Macro.y0DEwt9RQJVpDg3x]{Roll Caractéristiques}</p>
 <p>Voir les modificateurs de caractéristiques de la
@@ -17,17 +17,17 @@
 <p>Règle "maison" 2 : si le modificateur de chance est négatif ou nul, alors le score utilisé pour l'augure de naissance
     est de +1</p>
 <p>4) Déterminez le métier de niveau 0 : lancez 1d100 sur la
-    @UUID[Compendium.dcc-core-book.dcc-core-journals.JournalEntry.oos3Tf2YeajWrhVt]{Table 1-3: Métier}. Ce résultat
-    indiquera également l’arme de départ de niveau 0 et quelques possessions.
+    @UUID[Compendium.dcc-core-book.dcc-core-journals.JournalEntry.oos3Tf2YeajWrhVt]{Table 1-3: Métier}. </p>
+<p>Ce résultat indiquera également l’arme de départ de niveau 0 et quelques possessions.
     @UUID[Compendium.ludorg-shared-compendia.dcc-macros.Macro.Tkae3jxXNTEQfM3w]{Roll Métier Niveau 0}</p>
-<p></p>
 <p>5) Choisissez un alignement. Voir
     @UUID[Compendium.dcc-core-book.dcc-core-text.JournalEntry.4NtBrLegp6tg6oM7.JournalEntryPage.ctoqgcGGFYJF2945#alignement]{Alignement}
 </p>
 <p>6) Déterminez l’argent de départ; lancez [[/roll 5d12]] pièces de cuivre.</p>
 <p>7) Les personnages de niveau 0 démarrent avec un peu d’équipement, notamment une arme liée au métier, des possessions
-    et un équipement déterminé au hasard sur la table 3-3.
-    @UUID[Compendium.ludorg-shared-compendia.dcc-macros.Macro.AwzIyZQ3APFYG2lq]{Roll Equipement}</p>
+    et un équipement déterminé au hasard sur la
+    @UUID[Compendium.dcc-core-book.dcc-core-journals.JournalEntry.ZjRb1vX01Go7l2AD.JournalEntryPage.BBF2I5q36shqNosi]{Table
+    3-4: Équipement}. @UUID[Compendium.ludorg-shared-compendia.dcc-macros.Macro.AwzIyZQ3APFYG2lq]{Roll Equipement}</p>
 <p>S’ils le peuvent, les personnages de niveau 0 ont aussi la possibilité d’acheter ou échanger du matériel additionnel.
 </p>
 <p>8) Tentez de survivre à votre premier donjon. Si vous y parvenez et accumulez au moins 10 points d’expérience (PX),
